3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/disease.c: Add check to make sure symptom was not destroyed
  when victim dies - otherwise we get double remove/free.
MSW 2007-05-19

server/skill_util.c: fix wrong 'skills' display when no god is whoreshipped.
Nicolas Weeger 2007-05-10

server/disease.c: fix bug #1713112: rabies infects audience of the arena.
Nicolas Weeger 2007-05-09

server/c_wiz.c: fix multipart object creation.
Nicolas Weeger 2007-05-09

server/plugins.c: fix wrong parameter order.
Nicolas Weeger 2007-05-08

Add 'Crossfire.Object.Race' attribute.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-05-08

server/plugins.c: fix plugin unloading which didn't call the closePlugin function.
server/c_wiz.c: document.
Nicolas Weeger 2007-05-07

doc/Developers/objects: Mark 'flying' attribute as obsolete.
Andreas Kirschbaum 2007-05-06

Apply patch #1713563: Reopen log file on SIGHUP, courtesy Kari Pahula.
 common/logger.c
 include/global.h
 server/init.c
Nicolas Weeger 2007-05-05
   
Apply patch #1713564, Open log file only once with -detach, courtesy Kari Pahula.
 include/sproto.h
 server/daemon.c init.c
Nicolas Weeger 2007-05-05

Implement feature request #1657735: Server setting for handling 'incorrect' converters.
New server setting, 'allow_broken_converters', that controls what to do.
 common/init.c
 include/global.h
 lib/settings
 server/apply.c init.c
Nicolas Weeger 2007-05-05

Fix some type issues in plugin. Wrap change_abil(). Add set_resist(). Add duration property.
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c